# masters-with-lists-and-agents

./: .gitignore  TODO.md  pyproject.toml
incontext/: TODO.md  TODOs.md  __init__.py  agents.py  auth.py  db.py  home.py  lists.py  master_agents.py  master_lists.py  schema.sql
incontext/static/: styles.css
incontext/templates/: base.html
incontext/templates/agents/: edit.html  index.html  new.html  new_tethered.html  view.html
incontext/templates/auth/: login.html  register.html
incontext/templates/home/: index.html
incontext/templates/lists/: create.html  edit.html  index.html  new_tethered.html  view.html  view_tethered.html
incontext/templates/lists/details/: edit.html  new.html
incontext/templates/lists/items/: edit.html  new.html  view.html
incontext/templates/master-agents/: edit.html  index.html  new.html  view.html
incontext/templates/master-lists/: edit.html  index.html  new.html  view.html
incontext/templates/master-lists/master-details/: edit.html  new.html
incontext/templates/master-lists/master-items/: edit.html  new.html  view.html
tests/: TODO.md  conftest.py  data.sql  test_agents.py  test_auth.py  test_db.py  test_factory.py  test_home.py  test_lists.py  test_master_agents.py  test_master_lists.py  test_tethered_lists.py
